增加任务模块，以及测试任务模块插件

--- a/src/job.properties
+++ b/src/job.properties
@@ -1,4 +1,9 @@
 #JobA
 a.job=com.amphenol.test.TestQuartz
-a.cron=0/5 * * * * ?
+a.cron=0/2 * * * * ?
 a.enable=true
+
+#JobB
+b.job=com.amphenol.test.TestQuartz2
+b.cron=0/5 * * * * ?
+b.enable=false
