PM monitor sys 初步完成，可以进行上线测试，邮件功能还有需要完善的地方。

--- a/WebRoot/WEB-INF/shiro.ini
+++ b/WebRoot/WEB-INF/shiro.ini
@@ -34,10 +34,16 @@ shiro.loginUrl=/loginView
 [urls]
 /loginView=anon
 /login=anon
+/pmLogin=anon
+/pmLoginView=anon
 /js/**=anon
 /pages/commons/**=anon
 /pages/**=authc
 /static/**=anon
 /dwzpage/**=authc
+/bs-admin-bcore/pages/**=authc
+/bs-admin-bcore/comm/**=anon
+/bs-admin-bcore/template/**=anon
+/**=authc
 
 
