--- a/src/job.properties
+++ b/src/job.properties
@@ -1,9 +1,19 @@
 #JobA
 a.job=com.amphenol.test.TestQuartz
 a.cron=0/2 * * * * ?
-a.enable=true
+a.enable=false
 
 #JobB
-b.job=com.amphenol.test.TestQuartz2
+b.job=com.amphenol.agis.pm.job.MonthlyPMAutoCheckService
 b.cron=0/5 * * * * ?
 b.enable=false
+
+#JobC
+c.job=com.amphenol.agis.pm.job.QuarterlyPMAutoCheckService
+c.cron=0/15 * * * * ?
+c.enable=true
+
+#JobD
+d.job=com.amphenol.agis.pm.job.YearlyPMAutoCheckService
+d.cron=0/30 * * * * ?
+d.enable=true
