修改PM auto Check JOb 增加job运行时自动发送邮件到我的邮箱

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Jul 08 06:35:49 CST 2014
+#Sat Nov 01 20:19:33 CST 2014
 eclipse.preferences.version=1
+encoding//WebRoot/bs-admin-bcore/comm/login.jsp=UTF-8
 encoding//WebRoot/pages/test/tt.jsp=UTF-8
