--- a/src/job.properties
+++ b/src/job.properties
@@ -5,15 +5,15 @@ a.enable=false
 
 #JobB
 b.job=com.amphenol.agis.pm.job.MonthlyPMAutoCheckService
-b.cron=0/5 * * * * ?
-b.enable=false
+b.cron=0 02 11 * * ?
+b.enable=true
 
 #JobC
 c.job=com.amphenol.agis.pm.job.QuarterlyPMAutoCheckService
-c.cron=0/15 * * * * ?
+c.cron=0 03 11 ? * THU
 c.enable=true
 
 #JobD
 d.job=com.amphenol.agis.pm.job.YearlyPMAutoCheckService
-d.cron=0/30 * * * * ?
+d.cron=0 02 11 6 * ?
 d.enable=true
