超过3天发送报警邮件bug，修改判断

--- a/src/job.properties
+++ b/src/job.properties
@@ -5,15 +5,15 @@ a.enable=false
 
 #JobB
 b.job=com.amphenol.agis.pm.job.MonthlyPMAutoCheckService
-b.cron=0 02 11 * * ?
+b.cron=0 54 8 * * ?
 b.enable=true
 
 #JobC
 c.job=com.amphenol.agis.pm.job.QuarterlyPMAutoCheckService
-c.cron=0 03 11 ? * THU
+c.cron=0 04 9 * * ?
 c.enable=true
 
 #JobD
 d.job=com.amphenol.agis.pm.job.YearlyPMAutoCheckService
-d.cron=0 02 11 6 * ?
+d.cron=0 09 9 * * ?
 d.enable=true
