--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sat Nov 01 20:19:33 CST 2014
+#Wed Apr 08 20:27:26 CST 2015
 eclipse.preferences.version=1
 encoding//WebRoot/bs-admin-bcore/comm/login.jsp=UTF-8
 encoding//WebRoot/pages/test/tt.jsp=UTF-8
+encoding//src/log4j.properties=UTF-8
